--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,229 @@ Green: #00B172
 White: #FFF
 
 */
+.navbar{
+    display: flex;
+    justify-content: space-between;
+}
+
+.spotify-logo{
+    width: 200px;
+    height: 60px;
+    margin: 10px;
+}
+
+.navbar ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px;
+}
+
+.navbar li{
+    list-style-type: none;
+    letter-spacing: 2px;
+    font-size: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.music-section{
+    background-image: url(../images/landing.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    height: 800px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1{
+        font-size: 5rem;
+        margin-bottom: 25px;
+    }
+
+    p{
+        font-size: 1.6rem;
+        font-weight: lighter;
+        letter-spacing: 1px;
+        margin: 0px;
+    }
+}
+
+#about-spotify-section{
+    margin-bottom: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2{
+        font-size: 2rem;
+        letter-spacing: 1px;
+        text-decoration: underline rgb(41, 167, 94);;
+    }
+
+    div{
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-around;
+        text-align: center;
+
+        section{
+            margin-right: 30px;
+
+            p{
+                font-size: 1.2rem;
+            }
+        }
+    }
+}
+
+.feature-icon{
+    width: 100px;
+}
+
+.feature-title{
+    color: rgb(41, 167, 94);
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+#spotify-app{
+    background-color: rgb(41, 167, 94);
+    background-image: url(../images/spotify-icon-white.png);
+    background-repeat: no-repeat;
+    background-size: 100px;
+    background-position-x: center;
+    background-position-y: center;
+    color: white;
+    width: 100%;    
+    height: 600px;
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 2 1;
+    text-align: left;
+
+    div{
+       margin-left: 5%;
+       flex-grow: 2; 
+    }
+}
+
+.spotify-song-img{
+    height: 400px;
+    margin-right: 5%;
+}
+
+#song-desc{
+    font-size: 2rem;
+    text-decoration: underline;
+    padding-bottom: 2px;
+}
+
+.app-feature{
+    font-size: 2rem;
+}
+
+.app-feature-desc{
+    font-size: 1.3rem;
+    width: 45%;
+}
+
+@media screen and (max-device-width: 760px) {
+
+    .spotify-logo{
+        width: 100px;
+        height: 30px;
+    }
+
+    .navbar{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar ul{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .music-section{
+        height: 200px;
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+        h1{
+            font-size: 2rem;
+        }
+    
+        p{
+            font-size: 1rem;
+        }
+    }
+
+    #about-spotify-section{
+        margin-bottom: 20px;
+
+        div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center; 
+            margin-top: 0px;
+    
+            section{    
+                p{
+                    font-size: 1rem;
+                    width: 200px;
+                }
+            }
+        }
+    }
+
+    .feature-icon{
+        width: 50px;
+    }
+    
+    .feature-title{
+        font-size: 1rem;
+    }
+
+    #spotify-app{
+        background-image: none;
+        height: 350px;
+        div{
+            margin-left: 25%;
+        }
+    }
+
+    #song-desc{
+        font-size: 1rem;
+    }
+
+    .spotify-song-img{
+        display: none;
+    }
+
+    .app-feature{
+        font-size: 1rem;
+    }
+    
+    .app-feature-desc{
+        font-size: 0.8rem;
+        width: 45%;
+    }
+}
+
+@media screen and (min-device-width: 760px) and (max-device-width: 1024px) { 
+}
